--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "dayjs": "^1.10.7",
+    "deep-equal": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "sass": "^1.45.1",
     "typescript": "^4.5.4",
@@ -62,6 +65,7 @@
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.9",
+    "@types/deep-equal": "^1.0.1",
     "webpack": "^5.65.0"
   }
 }
