--- a/front/src/Config.json
+++ b/front/src/Config.json
@@ -41,7 +41,7 @@
         },
         {
             "name": "Music",
-            "icone": "",
+            "icone": "/img/dock/apple-music.png",
             "mode": "cover"
         },
         {
