add cache policy

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -18,7 +18,7 @@ http {
         root /var/www/;
         index index.html;
 
-        location / {
+        location ~ ^/(?:img|static|video|files) {
             types {
                 image/jpeg jpg;
                 image/jpeg jpeg;
@@ -29,8 +29,14 @@ http {
                 text/css css;
                 application/javascript js;
                 application/json json;
-                text/html html;
             }
+            expires 30d;
+            add_header Cache-Control "public";
+            try_files $uri 404;
+        }
+        location / {
+            expires -1;
+            add_header Cache-Control "public";
             try_files $uri /index.html;
         }
     }
